scaling and modelling section

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -886,6 +886,26 @@
   keywords = {Climatic changes,plant ecophysiology,Vegetation and climate}
 }
 
+@article{bonanDynamicGlobalVegetation2003,
+  title = {A Dynamic Global Vegetation Model for Use with Climate Models: Concepts and Description of Simulated Vegetation Dynamics},
+  shorttitle = {A Dynamic Global Vegetation Model for Use with Climate Models},
+  author = {Bonan, Gordon B. and Levis, Samuel and Sitch, Stephen and Vertenstein, Mariana and Oleson, Keith W.},
+  date = {2003},
+  journaltitle = {Global Change Biology},
+  volume = {9},
+  number = {11},
+  pages = {1543--1566},
+  issn = {1365-2486},
+  doi = {10.1046/j.1365-2486.2003.00681.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2486.2003.00681.x},
+  urldate = {2021-08-08},
+  abstract = {Changes in vegetation structure and biogeography due to climate change feedback to alter climate by changing fluxes of energy, moisture, and momentum between land and atmosphere. While the current class of land process models used with climate models parameterizes these fluxes in detail, these models prescribe surface vegetation and leaf area from data sets. In this paper, we describe an approach in which ecological concepts from a global vegetation dynamics model are added to the land component of a climate model to grow plants interactively. The vegetation dynamics model is the Lund–Potsdam–Jena (LPJ) dynamic global vegetation model. The land model is the National Center for Atmospheric Research (NCAR) Land Surface Model (LSM). Vegetation is defined in terms of plant functional types. Each plant functional type is represented by an individual plant with the average biomass, crown area, height, and stem diameter (trees only) of its population, by the number of individuals in the population, and by the fractional cover in the grid cell. Three time-scales (minutes, days, and years) govern the processes. Energy fluxes, the hydrologic cycle, and carbon assimilation, core processes in LSM, occur at a 20 min time step. Instantaneous net assimilated carbon is accumulated annually to update vegetation once a year. This is carried out with the addition of establishment, resource competition, growth, mortality, and fire parameterizations from LPJ. The leaf area index is updated daily based on prevailing environmental conditions, but the maximum value depends on the annual vegetation dynamics. The coupling approach is successful. The model simulates global biogeography, net primary production, and dynamics of tundra, boreal forest, northern hardwood forest, tropical rainforest, and savanna ecosystems, which are consistent with observations. This suggests that the model can be used with a climate model to study biogeophysical feedbacks in the climate system related to vegetation dynamics.},
+  langid = {english},
+  keywords = {biogeography,climate model,dynamic global vegetation model,vegetation dynamics},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2486.2003.00681.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\3R9CWM86\\Bonan et al. - 2003 - A dynamic global vegetation model for use with cli.pdf;C\:\\Users\\Me\\Zotero\\storage\\V227AIDZ\\j.1365-2486.2003.00681.html}
+}
+
 @article{bowmanWarmerWorldWill2014,
   title = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests: Evidence from {{Australian}} Temperate and Subtropical Eucalypt Forests},
   shorttitle = {A Warmer World Will Reduce Tree Growth in Evergreen Broadleaf Forests},
@@ -2390,6 +2410,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\XBHKZNLA\\Feeley et al. - 2007 - Decelerating growth in tropical forest trees.pdf;C\:\\Users\\Me\\Zotero\\storage\\UV22WGGR\\j.1461-0248.2007.01033.html}
 }
 
+@article{feeleyRoleGapPhase2007,
+  title = {The Role of Gap Phase Processes in the Biomass Dynamics of Tropical Forests},
+  author = {Feeley, Kenneth J and Davies, Stuart J and Ashton, Peter S and Bunyavejchewin, Sarayudh and Nur Supardi, M.n and Kassim, Abd Rahman and Tan, Sylvester and Chave, Jérôme},
+  date = {2007-11-22},
+  journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
+  volume = {274},
+  number = {1627},
+  pages = {2857--2864},
+  publisher = {{Royal Society}},
+  doi = {10.1098/rspb.2007.0954},
+  url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2007.0954},
+  urldate = {2021-08-08},
+  abstract = {The responses of tropical forests to global anthropogenic disturbances remain poorly understood. Above-ground woody biomass in some tropical forest plots has increased over the past several decades, potentially reflecting a widespread response to increased resource availability, for example, due to elevated atmospheric CO2 and/or nutrient deposition. However, previous studies of biomass dynamics have not accounted for natural patterns of disturbance and gap phase regeneration, making it difficult to quantify the importance of environmental changes. Using spatially explicit census data from large (50{$\mkern1mu$}ha) inventory plots, we investigated the influence of gap phase processes on the biomass dynamics of four ‘old-growth’ tropical forests (Barro Colorado Island (BCI), Panama; Pasoh and Lambir, Malaysia; and Huai Kha Khaeng (HKK), Thailand). We show that biomass increases were gradual and concentrated in earlier-phase forest patches, while biomass losses were generally of greater magnitude but concentrated in rarer later-phase patches. We then estimate the rate of biomass change at each site independent of gap phase dynamics using reduced major axis regressions and ANCOVA tests. Above-ground woody biomass increased significantly at Pasoh (+0.72\% yr−1) and decreased at HKK (−0.56\% yr−1) independent of changes in gap phase but remained stable at both BCI and Lambir. We conclude that gap phase processes play an important role in the biomass dynamics of tropical forests, and that quantifying the role of gap phase processes will help improve our understanding of the factors driving changes in forest biomass as well as their place in the global carbon budget.},
+  keywords = {carbon cycling,carbon dioxide,disturbance,global change,succession,tree-fall gaps},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\59KRTV75\\Feeley et al. - 2007 - The role of gap phase processes in the biomass dyn.pdf}
+}
+
 @article{felsmannResponsesStructureFunction2017,
   title = {Responses of the Structure and Function of the Understory Plant Communities to Precipitation Reduction across Forest Ecosystems in {{Germany}}},
   author = {Felsmann, Katja and Baudis, Mathias and Kayler, Zachary E. and Puhlmann, Heike and Ulrich, Andreas and Gessler, Arthur},
@@ -2476,6 +2513,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\F9PXHZ59\\gcb.html}
 }
 
+@article{fisherVegetationDemographicsEarth2018,
+  title = {Vegetation Demographics in {{Earth System Models}}: {{A}} Review of Progress and Priorities},
+  shorttitle = {Vegetation Demographics in {{Earth System Models}}},
+  author = {Fisher, Rosie A. and Koven, Charles D. and Anderegg, William R. L. and Christoffersen, Bradley O. and Dietze, Michael C. and Farrior, Caroline E. and Holm, Jennifer A. and Hurtt, George C. and Knox, Ryan G. and Lawrence, Peter J. and Lichstein, Jeremy W. and Longo, Marcos and Matheny, Ashley M. and Medvigy, David and Muller-Landau, Helene C. and Powell, Thomas L. and Serbin, Shawn P. and Sato, Hisashi and Shuman, Jacquelyn K. and Smith, Benjamin and Trugman, Anna T. and Viskari, Toni and Verbeeck, Hans and Weng, Ensheng and Xu, Chonggang and Xu, Xiangtao and Zhang, Tao and Moorcroft, Paul R.},
+  date = {2018},
+  journaltitle = {Global Change Biology},
+  volume = {24},
+  number = {1},
+  pages = {35--54},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.13910},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.13910},
+  urldate = {2021-08-08},
+  abstract = {Numerous current efforts seek to improve the representation of ecosystem ecology and vegetation demographic processes within Earth System Models (ESMs). These developments are widely viewed as an important step in developing greater realism in predictions of future ecosystem states and fluxes. Increased realism, however, leads to increased model complexity, with new features raising a suite of ecological questions that require empirical constraints. Here, we review the developments that permit the representation of plant demographics in ESMs, and identify issues raised by these developments that highlight important gaps in ecological understanding. These issues inevitably translate into uncertainty in model projections but also allow models to be applied to new processes and questions concerning the dynamics of real-world ecosystems. We argue that stronger and more innovative connections to data, across the range of scales considered, are required to address these gaps in understanding. The development of first-generation land surface models as a unifying framework for ecophysiological understanding stimulated much research into plant physiological traits and gas exchange. Constraining predictions at ecologically relevant spatial and temporal scales will require a similar investment of effort and intensified inter-disciplinary communication.},
+  langid = {english},
+  keywords = {carbon cycle,demographics,dynamic global vegetation models,Earth System Model,ecosystem,vegetation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.13910},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\KL4H6VN4\\Fisher et al. - 2018 - Vegetation demographics in Earth System Models A .pdf;C\:\\Users\\Me\\Zotero\\storage\\VVIJYWKU\\gcb.html}
+}
+
 @article{fleckThreedimensionalLaminaArchitecture2003,
   title = {Three-Dimensional Lamina Architecture Alters Light-Harvesting Efficiency in {{Fagus}}: A Leaf-Scale Analysis},
   shorttitle = {Three-Dimensional Lamina Architecture Alters Light-Harvesting Efficiency in {{Fagus}}},
@@ -2492,6 +2549,24 @@
   abstract = {Modification of foliage exposition and morphology by seasonal average integrated quantum flux density (Qint) was investigated in the canopies of the shade-tolerant latesuccessional deciduous tree species Fagus orientalis Lipsky and Fagus sylvatica L. Because the leaves were not entirely flat anywhere in the canopy, the leaf lamina was considered to be three-dimensional and characterized by the cross-sectional angle between the leaf halves (θ). Both branch and lamina inclination angles with respect to the horizontal scaled positively with irradiance in the canopy, allowing light to penetrate to deeper canopy horizons. Lamina cross-sectional angle varied from 170° in the most shaded leaves to 90–100° in leaves in the top of the canopy. Thus, the degree of leaf rolling increased with increasing Qint, further reducing the light-interception efficiency of the upper-canopy leaves. Simulations of the dependence of foliage light-interception efficiency on θ demonstrated that decreases in θ primarily reduce the interception efficiency of direct irradiance, but that diffuse irradiance was equally efficiently intercepted over the entire range of θ values in our study. Despite strong alteration in foliage light-harvesting capacity within the canopy and greater transmittance of the upper crown compared with the lower canopy, mean incident irradiances varied more than 20-fold within the canopy, indicating inherent limitations in light partitioning within the canopy. This extensive canopy light gradient was paralleled by plastic changes in foliar structure and chemistry. Leaf dry mass per unit area varied 3–4-fold between the canopy top and bottom, providing an important means of scaling foliage nitrogen contents and photosynthetic capacity per unit area with Qint. Although leaf structure versus light relationships were qualitatively similar in all cases, there were important tree-to-tree and species-to-species variations, as well as evidence of differences in investments in structural compounds within the leaf lamina, possibly in response to contrasting leaf water availability in different trees.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\8EV9NV3N\\23-9-577.pdf}
+}
+
+@article{foleyIntegratedBiosphereModel1996,
+  title = {An Integrated Biosphere Model of Land Surface Processes, Terrestrial Carbon Balance, and Vegetation Dynamics},
+  author = {Foley, Jonathan A. and Prentice, I. Colin and Ramankutty, Navin and Levis, Samuel and Pollard, David and Sitch, Steven and Haxeltine, Alex},
+  date = {1996},
+  journaltitle = {Global Biogeochemical Cycles},
+  volume = {10},
+  number = {4},
+  pages = {603--628},
+  issn = {1944-9224},
+  doi = {10.1029/96GB02692},
+  url = {https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/96GB02692},
+  urldate = {2021-08-08},
+  abstract = {Here we present a new terrestrial biosphere model (the Integrated Biosphere Simulator - IBIS) which demonstrates how land surface biophysics, terrestrial carbon fluxes, and global vegetation dynamics can be represented in a single, physically consistent modeling framework. In order to integrate a wide range of biophysical, physiological, and ecological processes, the model is designed around a hierarchical, modular structure and uses a common state description throughout. First, a coupled simulation of the surface water, energy, and carbon fluxes is performed on hourly timesteps and is integrated over the year to estimate the annual water and carbon balance. Next, the annual carbon balance is used to predict changes in the leaf area index and biomass for each of nine plant functional types, which compete for light and water using different ecological strategies. The resulting patterns of annual evapotranspiration, runoff, and net primary productivity are in good agreement with observations. In addition, the model simulates patterns of vegetation dynamics that qualitatively agree with features of the natural process of secondary succession. Comparison of the model's inferred near-equilibrium vegetation categories with a potential natural vegetation map shows a fair degree of agreement. This integrated modeling framework provides a means of simulating both rapid biophysical processes and long-term ecosystem dynamics that can be directly incorporated within atmospheric models.},
+  langid = {english},
+  annotation = {\_eprint: https://agupubs.onlinelibrary.wiley.com/doi/pdf/10.1029/96GB02692},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\F4Y9TRBD\\96GB02692.html}
 }
 
 @online{ForestMicroclimatesClimate,
@@ -3410,6 +3485,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\GQF684KD\\Hu et al. - 2021 - Impacts of Canopy and Understory Nitrogen Addition.pdf}
 }
 
+@article{hurttTerrestrialModelsGlobal1998,
+  title = {Terrestrial Models and Global Change: Challenges for the Future},
+  shorttitle = {Terrestrial Models and Global Change},
+  author = {Hurtt, George C. and Moorcroft, PauL R. and And, Stephen W. Pacala and Levin, Simon A.},
+  date = {1998},
+  journaltitle = {Global Change Biology},
+  volume = {4},
+  number = {5},
+  pages = {581--590},
+  issn = {1365-2486},
+  doi = {10.1046/j.1365-2486.1998.t01-1-00203.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2486.1998.t01-1-00203.x},
+  urldate = {2021-08-08},
+  abstract = {A wide variety of models have illustrated the potential importance of terrestrial biological feedbacks on climate and climate change; yet our ability to make precise predictions is severely limited, due to a high degree of uncertainty. In this paper, after briefly reviewing current models, we present challenges for new terrestrial models and introduce a simple mechanistic approach that may complement existing approaches.},
+  langid = {english},
+  keywords = {biodiversity,climate change,ecosystem models,land use},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2486.1998.t01-1-00203.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\LIDRPEMG\\Hurtt et al. - 1998 - Terrestrial models and global change challenges f.pdf;C\:\\Users\\Me\\Zotero\\storage\\WM4X5UP7\\j.1365-2486.1998.t01-1-00203.html}
+}
+
 @article{hutchisonArchitectureDeciduousForest1986,
   title = {The {{Architecture}} of a {{Deciduous Forest Canopy}} in {{Eastern Tennessee}}, {{U}}.{{S}}.{{A}}.},
   author = {Hutchison, B. A. and Matt, D. R. and McMillen, R. T. and Gross, L. J. and Tajchman, S. J. and Norman, J. M.},
@@ -4310,6 +4405,24 @@
   langid = {english},
   keywords = {Chlorophyll fluorescence,Heat acclimation,Photosynthetic CO assimilation,Photosystem II,Respiration},
   file = {C\:\\Users\\Me\\Zotero\\storage\\5Q745VAP\\Krause et al. - 2013 - Thermal tolerance, net CO2 exchange and growth of .pdf}
+}
+
+@article{krinnerDynamicGlobalVegetation2005,
+  title = {A Dynamic Global Vegetation Model for Studies of the Coupled Atmosphere-Biosphere System},
+  author = {Krinner, G. and Viovy, Nicolas and de Noblet-Ducoudré, Nathalie and Ogée, Jérôme and Polcher, Jan and Friedlingstein, Pierre and Ciais, Philippe and Sitch, Stephen and Prentice, I. Colin},
+  date = {2005},
+  journaltitle = {Global Biogeochemical Cycles},
+  volume = {19},
+  number = {1},
+  issn = {1944-9224},
+  doi = {10.1029/2003GB002199},
+  url = {http://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2003GB002199},
+  urldate = {2021-08-08},
+  abstract = {This work presents a new dynamic global vegetation model designed as an extension of an existing surface-vegetation-atmosphere transfer scheme which is included in a coupled ocean-atmosphere general circulation model. The new dynamic global vegetation model simulates the principal processes of the continental biosphere influencing the global carbon cycle (photosynthesis, autotrophic and heterotrophic respiration of plants and in soils, fire, etc.) as well as latent, sensible, and kinetic energy exchanges at the surface of soils and plants. As a dynamic vegetation model, it explicitly represents competitive processes such as light competition, sapling establishment, etc. It can thus be used in simulations for the study of feedbacks between transient climate and vegetation cover changes, but it can also be used with a prescribed vegetation distribution. The whole seasonal phenological cycle is prognostically calculated without any prescribed dates or use of satellite data. The model is coupled to the IPSL-CM4 coupled atmosphere-ocean-vegetation model. Carbon and surface energy fluxes from the coupled hydrology-vegetation model compare well with observations at FluxNet sites. Simulated vegetation distribution and leaf density in a global simulation are evaluated against observations, and carbon stocks and fluxes are compared to available estimates, with satisfying results.},
+  langid = {english},
+  keywords = {climate,DVGM,vegetation},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1029/2003GB002199},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\TSRA5ZLH\\Krinner et al. - 2005 - A dynamic global vegetation model for studies of t.pdf;C\:\\Users\\Me\\Zotero\\storage\\W7KE3BJ5\\2003GB002199.html}
 }
 
 @article{kullDistributionLeafPhotosynthetic1998,
@@ -7670,10 +7783,10 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\EYIBWXME\\Rollinson et al. - Climate sensitivity of understory trees differs fr.pdf;C\:\\Users\\Me\\Zotero\\storage\\UJUZMBBY\\ecy.html}
 }
 
-@article{rollinsonClimateSensitivityUnderstory2021,
+@article{rollinsonClimateSensitivityUnderstory2020,
   title = {Climate Sensitivity of Understory Trees Differs from Overstory Trees in Temperate Mesic Forests},
   author = {Rollinson, Christine R. and Alexander, M. Ross and Dye, Alex W. and Moore, David J. P. and Pederson, Neil and Trouet, Valerie},
-  date = {2021},
+  date = {2020},
   journaltitle = {Ecology},
   volume = {102},
   number = {3},
@@ -8496,6 +8609,23 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\L7DAIMPF\\Sharkey et al. - 2008 - Isoprene Emission from Plants Why and How.pdf}
 }
 
+@article{shugartGapModelsTheir2018,
+  title = {Gap Models and Their Individual-Based Relatives in the Assessment of the Consequences of Global Change},
+  author = {Shugart, Herman H and Wang, Bin and Fischer, Rico and Ma, Jianyong and Fang, Jing and Yan, Xiaodong and Huth, Andreas and Armstrong, Amanda H},
+  date = {2018-03-01},
+  journaltitle = {Environ. Res. Lett.},
+  volume = {13},
+  number = {3},
+  pages = {033001},
+  issn = {1748-9326},
+  doi = {10.1088/1748-9326/aaaacc},
+  url = {https://iopscience.iop.org/article/10.1088/1748-9326/aaaacc},
+  urldate = {2021-08-08},
+  abstract = {Individual-based models (IBMs) of complex systems emerged in the 1960s and early 1970s, across diverse disciplines from astronomy to zoology. Ecological IBMs arose with seemingly independent origins out of the tradition of understanding the ecosystems dynamics of ecosystems from a ‘bottom-up’ accounting of the interactions of the parts. Individual trees are principal among the parts of forests. Because these models are computationally demanding, they have prospered as the power of digital computers has increased exponentially over the decades following the 1970s.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\QTXI5HJ9\\Shugart et al. - 2018 - Gap models and their individual-based relatives in.pdf}
+}
+
 @article{silvaResponseOldgrowthTropical2013,
   title = {Response of an Old-Growth Tropical Rainforest to Transient High Temperature and Drought},
   author = {Silva, Carlos E. and Kellner, James R. and Clark, David B. and Clark, Deborah A.},
@@ -8568,6 +8698,25 @@
   abstract = {It is well known that vertical canopy gradients and varying sky conditions influence photosynthesis (Pn), specific leaf area (SLA), leaf thickness (LT) and leaf pigments (lutein, â-carotene and chlorophyll). In contrast, little is known about these effects on monoterpenoid (MT) emissions. Our study examines simultaneously measured Pn, MT emissions and the MT/Pn ratio along the canopy of an adult European beech tree (Fagus sylvatica L.) in natural forest conditions. Dynamic branch enclosure systems were used at four heights in the canopy (7, 14, 21 and 25~m) in order to establish relationships and better understand the interaction between Pn and MT emissions under both sunny and cloudy sky conditions. Clear differences in Pn, MT emissions and the MT/Pn ratio were detected within the canopy. The highest Pn rates were observed in the sun leaves at 25~m due to the higher intercepted light levels, whereas MT emissions (and the MT/Pn ratio) were unexpectedly highest in the semi-shaded leaves at 21~m. The higher Pn rates and, apparently contradictory, lower MT emissions in the sun leaves may be explained by the hypothesis of Owen and Peñuelas (2005), stating synthesis of more photo-protective carotenoids may decrease the emissions of volatile isoprenoids (including MTs) because they both share the same biochemical precursors. In addition, leaf traits like SLA, LT and leaf pigments clearly differed with height in the canopy, suggesting that the leaf's physiological status cannot be neglected in future research on biogenic volatile organic compounds (BVOCs) when aiming at developing new and/or improved emission algorithms.},
   langid = {english},
   keywords = {Beech,Carotenoids,Monoterpenoids,Photosynthesis,Sun and shade leaves,Vertical canopy gradient,Volatiles}
+}
+
+@article{sitchEvaluationEcosystemDynamics2003,
+  title = {Evaluation of Ecosystem Dynamics, Plant Geography and Terrestrial Carbon Cycling in the {{LPJ}} Dynamic Global Vegetation Model},
+  author = {Sitch, S. and Smith, B. and Prentice, I. C. and Arneth, A. and Bondeau, A. and Cramer, W. and Kaplan, J. O. and Levis, S. and Lucht, W. and Sykes, M. T. and Thonicke, K. and Venevsky, S.},
+  date = {2003},
+  journaltitle = {Global Change Biology},
+  volume = {9},
+  number = {2},
+  pages = {161--185},
+  issn = {1365-2486},
+  doi = {10.1046/j.1365-2486.2003.00569.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1365-2486.2003.00569.x},
+  urldate = {2021-08-08},
+  abstract = {The Lund–Potsdam–Jena Dynamic Global Vegetation Model (LPJ) combines process-based, large-scale representations of terrestrial vegetation dynamics and land-atmosphere carbon and water exchanges in a modular framework. Features include feedback through canopy conductance between photosynthesis and transpiration and interactive coupling between these ‘fast’ processes and other ecosystem processes including resource competition, tissue turnover, population dynamics, soil organic matter and litter dynamics and fire disturbance. Ten plants functional types (PFTs) are differentiated by physiological, morphological, phenological, bioclimatic and fire-response attributes. Resource competition and differential responses to fire between PFTs influence their relative fractional cover from year to year. Photosynthesis, evapotranspiration and soil water dynamics are modelled on a daily time step, while vegetation structure and PFT population densities are updated annually. Simulations have been made over the industrial period both for specific sites where field measurements were available for model evaluation, and globally on a 0.5°° × 0.5°° grid. Modelled vegetation patterns are consistent with observations, including remotely sensed vegetation structure and phenology. Seasonal cycles of net ecosystem exchange and soil moisture compare well with local measurements. Global carbon exchange fields used as input to an atmospheric tracer transport model (TM2) provided a good fit to observed seasonal cycles of CO2 concentration at all latitudes. Simulated inter-annual variability of the global terrestrial carbon balance is in phase with and comparable in amplitude to observed variability in the growth rate of atmospheric CO2. Global terrestrial carbon and water cycle parameters (pool sizes and fluxes) lie within their accepted ranges. The model is being used to study past, present and future terrestrial ecosystem dynamics, biochemical and biophysical interactions between ecosystems and the atmosphere, and as a component of coupled Earth system models.},
+  langid = {english},
+  keywords = {biogeochemistry,carbon cycle,CO2,dynamic global vegetation model,ecosystem dynamics,terrestrial biosphere model},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1365-2486.2003.00569.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PGJ7NNQR\\Sitch et al. - 2003 - Evaluation of ecosystem dynamics, plant geography .pdf;C\:\\Users\\Me\\Zotero\\storage\\92AC4IWA\\j.1365-2486.2003.00569.html}
 }
 
 @article{slikLargeTreesDrive2013,
@@ -8781,6 +8930,26 @@
   keywords = {climate,DBH,Jmax,leaf carbon exchange,leaf traits,LMA,photosynthesis,precipitation,respiration,soil moisture,temperature,Vcmax},
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ecy.1992},
   file = {C\:\\Users\\Me\\Zotero\\storage\\2DC25MVS\\Smith and Dukes - 2017 - LCE leaf carbon exchange data set for tropical, t.pdf;C\:\\Users\\Me\\Zotero\\storage\\YTCJ2KRW\\ecy.html}
+}
+
+@article{smithRepresentationVegetationDynamics2001,
+  title = {Representation of Vegetation Dynamics in the Modelling of Terrestrial Ecosystems: Comparing Two Contrasting Approaches within {{European}} Climate Space},
+  shorttitle = {Representation of Vegetation Dynamics in the Modelling of Terrestrial Ecosystems},
+  author = {Smith, Benjamin and Prentice, I. Colin and Sykes, Martin T.},
+  date = {2001},
+  journaltitle = {Global Ecology and Biogeography},
+  volume = {10},
+  number = {6},
+  pages = {621--637},
+  issn = {1466-8238},
+  doi = {10.1046/j.1466-822X.2001.t01-1-00256.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1046/j.1466-822X.2001.t01-1-00256.x},
+  urldate = {2021-08-08},
+  abstract = {1 Advances in dynamic ecosystem modelling have made a number of different approaches to vegetation dynamics possible. Here we compare two models representing contrasting degrees of abstraction of the processes governing dynamics in real vegetation. 2 Model (a) (GUESS) simulates explicitly growth and competition among individual plants. Differences in crown structure (height, depth, area and LAI) influence relative light uptake by neighbours. Assimilated carbon is allocated individually by each plant to its leaf, fine root and sapwood tissues. Carbon allocation and turnover of sapwood to heartwood in turn govern height and diameter growth. 3 Model (b) (LPJ) incorporates a ‘dynamic global vegetation model’ (DGVM) architecture, simulating growth of populations of plant functional types (PFTs) over a grid cell, integrating individual-level processes over the proportional area (foliar projective cover, FPC) occupied by each PFT. Individual plants are not simulated, but are replaced by explicit parameterizations of their growth and interactions. 4 The models are identical in their representation of core physiological and biogeochemical processes. Both also use the same set of PFTs, corresponding to the major woody plant groups in Europe, plus a grass type. 5 When applied at a range of locations, broadly spanning climatic variation within Europe, both models successfully predicted PFT composition and succession within modern natural vegetation. However, the individual-based model performed better in areas where deciduous and evergreen types coincide, and in areas subject to pronounced seasonal water deficits, which would tend to favour grasses over drought-intolerant trees. 6 Differences in model performance could be traced to their treatment of individual-level processes, in particular light competition and stress-induced mortality. 7 Our results suggest that an explicit individual-based approach to vegetation dynamics may be an advantage in modelling of ecosystem structure and function at the resolution required for regional- to continental-scale studies.},
+  langid = {english},
+  keywords = {Competition,DGVM,ecosystem model,Europe,gap model,mortality,plant functional type,succession},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1046/j.1466-822X.2001.t01-1-00256.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VWDN2RZJ\\Smith et al. - 2001 - Representation of vegetation dynamics in the model.pdf;C\:\\Users\\Me\\Zotero\\storage\\9KXJC7YL\\j.1466-822X.2001.t01-1-00256.html}
 }
 
 @article{smithSeasonalDroughtrelatedChanges2019,
@@ -10179,6 +10348,25 @@
   abstract = {Estimating leaf temperature distributions (LTDs) in canopies is crucial in forest ecology. Leaf temperature affects the exchange of heat, water, and gases, and it alters the performance of leaf‐dwelling species such as arthropods, including pests and invaders. LTDs provide spatial variation that may allow arthropods to thermoregulate in the face of long‐term changes in mean temperature or incidence of extreme temperatures. Yet, recording LTDs for entire canopies remains challenging. Here, we use an energy‐exchange model (RATP) to examine the relative roles of climatic, structural, and physiological factors in influencing three‐dimensional LTDs in tree canopies. A Morris sensitivity analysis of 13 parameters showed, not surprisingly, that climatic factors had the greatest overall effect on LTDs. In addition, however, structural parameters had greater effects on LTDs than did leaf physiological parameters. Our results suggest that it is possible to infer forest canopy LTDs from the LTDs measured or simulated just at the surface of the canopy cover over a reasonable range of parameter values. This conclusion suggests that remote sensing data can be used to estimate 3D patterns of temperature variation from 2D images of vegetation surface temperatures. Synthesis and applications. Estimating the effects of LTDs on natural plant–insect communities will require extending canopy models beyond their current focus on individual species or crops. These models, however, contain many parameters, and applying the models to new species or to mixed natural canopies depends on identifying the parameters that matter most. Our results suggest that canopy structural parameters are more important determinants of LTDs than are the physiological parameters that tend to receive the most empirical attention.},
   pmcid = {PMC5980536},
   file = {C\:\\Users\\Me\\Zotero\\storage\\DZPQAY3V\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf;C\:\\Users\\Me\\Zotero\\storage\\I5IBUEND\\Woods et al. - 2018 - Structure is more important than physiology for es.pdf}
+}
+
+@article{woodwardVegetationDynamicsSimulating2004,
+  title = {Vegetation Dynamics – Simulating Responses to Climatic Change},
+  author = {Woodward, F. I. and Lomas, M. R.},
+  date = {2004-08},
+  journaltitle = {Biological Reviews},
+  volume = {79},
+  number = {3},
+  pages = {643--670},
+  publisher = {{Cambridge University Press}},
+  issn = {1469-185X, 1464-7931},
+  doi = {10.1017/S1464793103006419},
+  url = {https://www.cambridge.org/core/journals/biological-reviews/article/abs/vegetation-dynamics-simulating-responses-to-climatic-change/1AB574C8E515FE4D659780A38FDF19D7},
+  urldate = {2021-08-08},
+  abstract = {A modelling approach to simulating vegetation dynamics is described, incorporating critical processes of carbon sequestration, growth, mortality and distribution. The model has been developed to investigate the responses of vegetation to environmental change, at time scales from days to centuries and from the local to the global scale. The model is outlined and subsequent tests, against independent data sources, are relatively successful, from the small scale to the global scale. Tests against eddy covariance observations of carbon exchange by vegetation indicated significant differences between measured and simulated net ecosystem production (NEP). NEP is the net of large fluxes due to gross primary production and respiration, which are not directly measured and so there is some uncertainty in explaining differences between observations and simulations. In addition it was noted that closer agreement of fluxes was achieved for natural, or long-lived managed vegetation than for recently managed vegetation. The discrepancies appear to be most closely related to respiratory carbon losses from the soil, but this area needs further exploration. The differences do not scale up to the global scale, where simulated and measured global net biome production were similar, indicating that fluxes measured at the managed observed sites are not typical globally.The model (the Sheffield Dynamic Global Vegetation Model, SDGVM) has been applied to contemporary vegetation dynamics and indicates a significant CO2 fertilisation effect on the sequestration of atmospheric CO2. The terrestrial carbon sink for the 20th century is simulated to be widespread between latitudes 40° S and 65° N, but is greatest between 10° S and 6° N, excluding the effects of human deforestation. The mean maximum sink capacity over the 20th century is small, at 25 gC m−2 year−1, or approximately 1\% of gross primary production.Simulations of vegetation dynamics under a scenario of future global warming indicate a gradual decline in the terrestrial carbon sink, with the capacity to absorb human emissions of CO2 being reduced from 20\% in 2000 to approximately 2\% between 2075 and 2100. The responses of carbon sequestration and vegetation structure and distribution to stabilisation of climate and CO2 may extend for up to 50 years after stabilisation has occurred.},
+  langid = {english},
+  keywords = {atmospheric CO2,carbon sequestration,global change,primary productivity,respiration,vegetation distribution,vegetation model},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\9LP8ZSYV\\1AB574C8E515FE4D659780A38FDF19D7.html}
 }
 
 @online{Working,
