--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -106,7 +106,7 @@ Rising temperatures are profoundly influencing forests on many scales with poten
 
 **Forest responses and feedbacks to climate change will have a critical influence on the future of Earth's climate.**
 Globally, temperatures have risen $1.2^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to rise a $1.6 - 4.3^{\circ}$C above pre-industrial levels by 2100 (IPCC 2014), accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004] and hotter droughts [@trenberthGlobalWarmingChanges2014b].
-These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@teskeyResponsesTreeSpecies2015; @rollinsonClimateSensitivityUnderstory; @breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduced forest carbon sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
+These changes are expected to have profound effects on tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; IPBES report], including altered rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reduced growth and elevated mortality during drought [@rollinsonClimateSensitivityUnderstory; @breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. Collectively, these impacts may lead to reduced forest carbon sequestration, as may already be occurring in some forests [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020]. The resulting feedbacks to the climate system, carbon storage, and changes in albedo and hydrology will in turn have a critical influence on the future trajectory of climate change [@bonan_ecological_2016], yet this influence remains extremely uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, containg trees of different sizes along various successional stages. 
@@ -177,14 +177,11 @@ While $T_{leaf}$ is rarely exactly equal to $T_{air}$ (poikilothermy), it is mos
 ### Biophysical drivers
 
 **Fundamentally, $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on biophysical principles, where $T_{leaf}-T_{air}$ is a function of energy input from net radiation ($R_n$, including shortwave and longwave) minus heat lost to the environment [Fig. `r fig_leaf_T`, @campbell_introduction_1998; @muir_tealeaves_2019; @michaletzEnergeticCarbonEconomic2016; @michaletzPlantThermoregulationEnergetics2015].**
-The dominant component of a leaf's energy balance is net radiation ($R_n$, including shortwave and longwave). High radiation loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).
-Generally, the dominant avenue of heat loss to the environment is latent heat flux, wherein the loss of energy required to convert water from a liquid to a vapour state during evaporation and transpiration cools the leaf. 
-Latent heat flux ($\lambda E$) is controlled primarily by stomatal and boundary layer conductances, $g_s$ and $g_a$, and by the water vapour concentration difference between the leaf surface and the bulk air.
-Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, which in turn increases with wind speed [Fig. `r fig_leaf_T`b,@daudetWindSpeedLeaf1999a]; decreases with leaf size (Fig. `r fig_leaf_T`d);
-decreases with $g_s$ (Fig. `r fig_leaf_T`e);
-and increases with VPD, or increases with RH (Fig. `r fig_leaf_T`c).
+High $R_n$ loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).Sensible heat flux between leaf and air is regulated by leaf boundary layer conductance ($g_a$), which is greater in smaller leaves (Fig. `r fig_leaf_T`d) and higher wind speeds [Fig. `r fig_leaf_T`b]. Latent heat flux ($\lambda E$) through transpiration has a strong cooling effect, and is primarily regulated by stomatal conductance ($g_s$), but also by RH through a direct effect on the leaf-to-air vapor gradient (Fig. `r fig_leaf_T`c) and an indirect effect on $g_s$.
+Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, increases with wind speed [Fig. `r fig_leaf_T`b,@daudetWindSpeedLeaf1999a]; decreases with leaf size (Fig. `r fig_leaf_T`d);
+decreases with $g_s$ (Fig. `r fig_leaf_T`e); and increases with VPD, or increases with RH (Fig. `r fig_leaf_T`c).
 
-![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/fig3_leafenergy.png)
+![**Figure `r fig_leaf_T`. Theoretical expectations for variation in $T_{leaf}-T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/fig3_leafenergy.png)
 
 **Leaf energy balance is a tradeoff between water-use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
@@ -199,7 +196,7 @@ High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) i
 However, higher wind speeds (e.g., up to ~ 4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) mediate the direct effects of solar radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may stifle $\lambda E$ (through reduced $g_s$ and $g_a$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
 **Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
-Closed canopies with high LAI act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. The intensity of incoming radiation and VPD in the upper canopy, combined with hydraulic challenges of water transport to the tops of tall trees [**REFS**] can cause $g_s$-limitation. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than lower canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
+Closed canopies with high LAI act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. The intensity of incoming radiation and VPD in the upper canopy, combined with hydraulic challenges of water transport to the tops of tall trees [**REFS**] can cause $g_s$-limitation and an increase in $T_{leaf}$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than buffered lower canopy layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
 
 **Within closed-canopy forests vertical gradients, the propensity for $T_{leaf}$ to be elevated above $T_{air}$ are expected to vary with micrometeorological conditions (Fig. `r fig_leaf_T`).**
 Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated in the canopy compared to the understory (Fig.`r fig_leaf_T`).
@@ -208,7 +205,6 @@ In contrast, under hot and wet conditions, higher wind speeds and $g_a$ enable c
 Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
 Understory leaves, which typically experience lower windspeeds (Fig. `r fig_NEON_vertical`), would retain more heat.
 Higher RH conditions in the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021].
-
 
 ### In situ observations
 
@@ -219,9 +215,9 @@ In contrast, in open forests with lower LAI, lower-canopy $T_{leaf}$ can equal o
 Similarly, in very open forests or savannas, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019; @johnstonWhatLiesVertical2020 (in review)]. 
 Greater $RH$ in the inner canopy can also increase $T_{leaf}$ relative to upper canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 
-It is noteworthy that $T_{leaf}$ often differs substantially from branch and stem temperatures. For instance, exposed tropical tree bark can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018; @stillImagingCanopyTemperature2021]. 
-Thus, the vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
-Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021].
+It is noteworthy that leaf and branch temperatures often differ substantially. For instance, exposed tropical tree bark can be much warmer than leaves [@pauTropicalForestTemperature2018; @stillImagingCanopyTemperature2021; @johnstonWhatLiesVertical2020]. 
+Thus, vegetation temperature ($T_{veg}$) measured using sensors that integrate across both leaves and woody vegetation (e.g., infrared sensors for $T_{veg}$ at NEON sites, Fig. `r fig_NEON_vertical`h) does not always equal $T_{leaf}$, particularly in settings where leaf area is low relative to woody vegetation (*i.e.*, low-LAI ecosystems and understories). 
+Recent advances in $T_{leaf}$ modeling (see "Scaling across Space and Time") will enhance our understanding of large scale $T_{leaf}$ vertical patterns [@stillImagingCanopyTemperature2021; @macleanMicroclimcMechanisticModel2021].
 
 ## Leaf traits 
 
@@ -231,7 +227,7 @@ This dichotomy in leaves is observed along the vertical gradient where canopy-le
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
-However, when it comes to understanding and modeling forest ecosystem function, given that species traits strongly shape the propensity for trees to inhabit understory vs. canopy positions, ecosystem function is shaped by interspecific trait variation (e.g., *Lamour, Serbin in prep*).
+However, when it comes to understanding and modeling forest ecosystem function, given that species traits strongly shape the propensity for trees to inhabit understory vs. canopy positions, ecosystem function is also shaped by interspecific trait variation (e.g., *Lamour, Serbin in prep*).
 
 
 ### Intraspecific variation
@@ -247,7 +243,7 @@ It has been established that independent of the light environment, traits also v
 ```
 ---
 nocite: |
-@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000
+@mau_temperate_2018; @cobleLightDrivesVertical2014; @sackHowStrongIntracanopy2006; @chinLeafAcclimationLight2017; @wykaResponsesLeafStructure2012; @athertonSpatialVariationLeaf2017; @kenzoHeightrelatedChangesLeaf2015; @kusiPlasticLeafMorphology2020; @dangProfilesPhotosyntheticallyActive1997;@gebauerEffectsProlongedDrought2015; @marencoLeafTraitPlasticity2017; @kafutiFoliarWoodTraits2020; @vanwittenbergheVariabilityStomatalConductance2012; @zhang_photosynthetic_2012; @weerasingheCanopyPositionAffects2014; @oldhamHydrostaticGradientNot2010; @ichieEcologicalDistributionLeaf2016; @gregoriouEffectsReducedIrradiance2007; @levizouNondestructiveAssessmentLeaf2005; @liakouraTrichomeDensityIts1997; @fauset_differences_2018; @niinemetsAcclimationHighIrradiance1998; Ishida et al. 1999; @millenLeafAngleAdaptive1979; @smithShootStructuralEffects1988; @hadleyInfluenceKrummholzMat1987; @panditharathnaChangeLeafStructure2008; @baltzerLeafOpticalResponses2005; @dietzVerticalPatternsDuration2007; @cobleHowVerticalPatterns2016a; @scartazzaInvestigatingEuropeanBeech2016; @duursmaVerticalCanopyGradients2006; @harleyEffectsLightTemperature1996; @hernandezSimilarTemperatureDependence2020; @turnbullScalingFoliarRespiration2003; @chenLeafEconomicsSpectrum2020; @vandewegPhotosyntheticParametersDark2012; @cavaleri_foliar_2008; @konigerXanthophyllCyclePigmentsPhotosynthetic1995;@matsubaraSunshadePatternsLeaf2009; @harrisChangesLeafProperties2013; @hansenVariationPigmentComposition2002a; @poorterLeafOpticalProperties1995; @cobleHowVerticalPatterns2016; @niinemetsCanopyGradientsLeaf2004; @poorterLeafOpticalProperties2000; @taylorNewFieldInstrument2021
 ---
 
 
@@ -353,9 +349,9 @@ Potential mechanisms for these patterns include stifling of understory $\lambda 
 ### C and water flux
 
 **Canopy trees account for the majority of forest ecosystem water and carbon cycling.**
-While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a). In terms of C cycling, it has been estimated that canopy strata contribute $\geq$64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$10cm DBH usually contributing $>$85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
+While studies partitioning transpiration across forest vertical gradients are rare, both ET and transpiration have been shown to increase with height in a *Picea abies* forest in Germany, such that the upper half of the canopy contributed an estimated 80% of daytime ET [@staudtVerticalStructureEvapotranspiration2011]. Similarly, in a tropical forest in the Brazilian Amazon, canopy and subcanopy trees jointly contributed approximately 93% of ET, or 88% of transpiration (Fig 5a). In terms of C cycling, it has been estimated that canopy strata contribute $\geq$ 64% of net daytime CO~2~ uptake [i.e., GPP - ecosystem respiration, including from soil; @missonPartitioningForestCarbon2007]. Large trees also dominate in terms of woody aboveground net primary productivity ($ANPP_{woody}$) and mortality ($M_{woody}$), with trees $\geq$ 10cm DBH usually contributing > 85% of ANPPwoody and Mwoody across 25 globally distributed forests (Fig. 5b, Piponiot et al., accepted). 
 
-**Include ET figure** Figure 5. Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes. 
+![**Figure 5.** Vertical partitioning of (a) evapotranspiration and (b) C fluxes in tropical forests. Panel (a) is from (Kunert et al. 2017). I'd like to create a parallel figure for C fluxes.](schematics/ecosystem vertical partitioning/ecosystem partitioning_updated.png)
 
 **It is less clear how thermal sensitivity of water and carbon fluxes vary across strata, but likely responses can be inferred based on the patterns and mechanisms reviewed above.** We expect that transpiration, GPP, and $ANPP_{woody}$ should all be more sensitive to high temperatures-- at least under conditions of moderate to high VPD. A rare example of a study comparing the climate sensitivity of C fluxes across size classes [@meakemRoleTreeSize2018] showed that $M_{woody}$ was more strongly elevated among large than small trees during an El Nino drought in Panama, while the smallest size classes had higher productivity during the drought, likely because of increased light in the understory. It remains far less clear how thermal sensitivity is likely to vary across forest strata under wet conditions, but both physiological mechanisms (Fig. 3) and tree ring evidence (Fig. 4) suggests that understory trees may respond more negatively to hot, wet conditions. Further research is required to better understand the thermal sensitivity of forest ecosystem function across strata.
 
@@ -390,28 +386,23 @@ These shifts in forest structure at large may be detectable by lidar and thermal
  
 ## Scaling across space and time 
 
-*Scaling our understanding across space and time requires remote sensing and models.*
-
 ### Representing Vertical Gradients in Models
 
-Models are needed to predict future ecosystem dynamics, which remain one of the largest sources of uncertainty in Earth System Model (ESM) projections of the future of global carbon cycling and climate change (*Friedlingstein et al. 2006*). 
-Dynamic global vegetation models (DGVMs) comprise the land surface models in ESMs used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks (Cao & Woodward, 1998; Foley et al., 1996; Sitch et al., 2003; Woodward & Lomas, 2004). 
-DGVMs operate at a range of scales and have varying degrees of complexity, ranging from detailed individual-based models (*a.k.a.* forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal resolution (Christoffersen et al., 2016; Fischer et al., 2016; Fyllas et al., 2014; Sato et al. 2007; Shuman et al. 2014; Smith et al., 2001; Bugmann, 2001; Dietze & Latimer, 2011), to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer (Fig. `r fig_model`). 
-This simplification results in greater computational efficiency and thus easier integration into ESMs (Arora & Boer, 2010; Bonan et al. 2003; Cox, 2001; Krinner et al., 2005), although it comes at a cost of a lack of representation of important demographic processes, canopy gap formation, vertical light competition, competitive exclusion, and successional recovery from disturbance (Feeley et al., 2007; Hurtt et al. 1998; Moorcroft et al., 2001; Smith et al. 2001; Stark et al., 2012). 
-Improved representation of vegetation demographic processes in ESMs, specifically including forest canopy architectural variation in both horizontal and vertical directions, has repeatedly been identified as a critical step toward reduced uncertainty  and more accurate characterization of biologically mediated feedbacks (Banerjee & Linn 2018, Evans, 2012; Moorcroft, 2006; Moorcroft, Hurtt, & Pacala, 2001; Purves & Pacala, 2008; Thomas, Brookshire, & Gerber, 2015).
-Still, as models increase in complexity, model developments and improvements have direct tradeoffs with increased computational cost and potentially decreased interpretability of model output, highlighting the need to identify and parsimoniously represent the most essential drivers of forest ecosystem function. 
+Models are needed to predict future ecosystem dynamics, which remain one of the largest sources of uncertainty in Earth System Model (ESM) projections of the future of global carbon cycling and climate change [@friedlingsteinClimateCarbonCycle2006]. Dynamic global vegetation models (DGVMs), which comprise the land surface models in ESMs, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. This simplification is computationally more efficient, although it comes at a cost of a lack of representation of important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. The computational middle-ground to representing vertical structure in DVGMs lies in cohort-based models (CBMs), which sit between the oversimplified vegetation dynamics in big-leaf models and the computational expense of individual-based models. CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
 
-![**Figure `r fig_model`. DRAFT. Enrich this by showing 3-4 carefully selected scenarios (e.g., baseline, warming-mesic, warming-drought, canopy disturbance), and maybe a few key processes/ consequences (leaf T, C balance).** [Issue #42](https://github.com/EcoClimLab/vertical-thermal-review/issues/42). ](schematics/model_schematic.png)
+**The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.** Improved representation of vertical variation in forest canopy architecture and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks (Moorcroft, Hurtt, & Pacala, 2001; Banerjee & Linn 2018; Bonan et al. 2021). In addition, this review finds that, although larger trees face disproportionate stress during drought, understory trees have fewer cooling mechanisms and may also be stifled under hot, humid conditions. **A key question is whether existing models adequately represent the processes that underpin understory tree responses to thermal stress as well as large tree responses.** Most models have been developed to capture dynamics in the canopy, or overstory, given the disproportionate role of these large trees in ecosystem dynamics. Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models. This is likely due in large part to the fact that observations are only beginning to shed light on the vulnerability of understory trees to changes in temperature and other abiotic conditions [e.g., @rollinsonClimateSensitivityUnderstory2020]. 
 
-**The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.**
-*[how?]*
+Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g., thermal responses, as we present in this paper). At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function (e.g., de Pury & Farquhar, 1997; Bonan et al 2021). In addition, capturing the vertical gradients in NPP, GPP, and respiration, and subsequently the net ecosystem effects, requires improved characterization of the functional response of leaf-level processes to vertically varying abiotic conditions, and the role of traits and abiotic conditions in mediating responses to thermal sensitivity. 
 
-**The computationally feasible approach to representing vertical structuring in DVGMs lies in Cohort-based models (CBMs), which sit in the middle of this continuum between the oversimplified vegetation dynamics in big-leaf models and the computational expense of individual-based models.** CBMs represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type (Haverd et al., 2013; Hurtt et al., 1998; Lischke et al. 2006; Medvigy et al. 2009; Moorcroft et al., 2001; Scherstjanoi et al. 2014; Smith et al., 2014; Weng et al., 2015). 
-*(KAT: I think all of the following content is great, but probably needs to be heavily tightened:)*
+![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical canopy structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. [Issue #42](https://github.com/EcoClimLab/vertical-thermal-review/issues/42). ](schematics/fig_remote_sensing.png)
 
-To review the vertical light environment and thermodynamics of CBMs in more detail, we focus here on the Ecosystem Demography model version 2 (ED2), a model that is actively undergoing continued development and application across a range of ecosystems and landscapes (Moorcroft et al. 2001, Longo et al 2019 Pt 1 & pt 2). ED2 is also the progenitor of the Functionally Assembled Terrestrial Ecosystem Simulator (FATES), the DGVM coupled with the Energy Exascale Earth System Model (E3SM) (Xu & Christoffersen 2017 ) . In ED2, cohorts are tracked across multiple size-classes or individuals within the same plant functional type (PFT). Each cohort can encounter multiple light environments within a single climatic grid cell depending on patch-level disturbance history and vertical light competition that modulates interactions between plant traits and resource acquisition. Heterogeneity in the light environment and canopy structure across patches within a grid cell gives rise to varying horizontal and vertical micro-environments that differ in temperature, humidity, soil moisture, and soil nutrient conditions (Fisher et al 2018). The energy, water, and carbon dioxide cycles are solved separately for each patch in ED2, while fluxes and storage associated with individual plants are solved for each cohort within patches (Longo et al 2019). As a result, vegetation structure and functional distributions are emergent properties in the model that depend on plant functional traits and their interactions with abiotic environmental conditions. Each plant perceives a unique environment, including incident light, temperature, and vapor pressure deficit that varies across local scales in association with the horizontal and vertical position of each cohort relative to other cohorts, in addition to patch level differences in topographic and edaphic conditions. 
+**Scaling in situ data with remote sensing**
 
-Because most CBMs are spatially implicit within grid cells, direct and diffuse photosynthetically active radiation (PAR) is distributed to cohorts of differing heights using radiative transfer models that depend on designated rules associated with how crown architecture is represented, rather than via direct spatial competition determined by spatially explicit crown locations (Fisher et al. 2010?). The flat-top crown method used in ED and ED2 stacks cohort-layers vertically, and a radiative transfer model is used to determine radiation absorbed by each layer at its midpoint, meaning that each cohort is shaded by all taller cohorts. This is distinct from other models that represent crown architecture using a perfect plasticity approximation (PPA) approach, which assumes that tree crowns completely fill canopy gaps through phototropism (stem leaning) and crown filling (Strigul et al. 2008). Discrete canopy layers are comprised of self-organizing crowns that all receive the same incoming radiation. Once the canopy layer is filled with tree crowns, successive shorter trees inhabit the subsequent understory layer and are shaded by the trees in the canopy (Fisher et al 2010/2018?). Models using the PPA approach differ in number of understory layers (e.g. some only have one) (Fisher et al 2018). Though an improvement over big-leaf models, models that separate the canopy into only two layers (e.g., sunlit and shaded portions) may not be able to capture important within-canopy variation in terms of leaf dynamics (e.g., seasonal shifts in vertical leaf area distributions, Smith et al. 2019) and functions (e.g. thermal responses, as we present in this paper). Hence, multi-layered ecosystem models may be necessary for accurately projecting future forest function. (E.g. see de Pury & Farquhar, 1997).
+Remote sensing data provide a valuable means to scale between in situ observations and DGVMs. Specifically, the increasing availability of airborne and spaceborne LiDAR and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with in situ data and across larger landscapes (Fig. 6). Airborne and spaceborne lidar, as well as terrestrial laser scanning data yield detailed 3D reconstructions of whole tree and forest structure. These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor (Hulley et al. 2019, Fisher et al. 2020) or drone- and tower-based FLIR cameras. 
+
+Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions (Disney et al. 2019), evaluate spatial variation in vertical leaf area density profiles (Detto et al. 2015), and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems (Musselman et al. 2013). In addition, shading by the overstory can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other LIDAR-based analyses (e.g., Davis et al. 2019). Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures (Johnston et al. in review). (Pau et al. 2018) used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than air temperatures or VPD. In a savanna system in the western U.S., (Johnston et al. in review) found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies. This finding was the opposite of what was expected and occurred in association with very high grass temperatures. The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of in situ measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
+
+
 
 
 ## Conclusions
